# Graphs

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  graphclient.cpp  graphclient.h
src/algo/: CMakeLists.txt  bfs.cpp  bfs.h  color.cpp  color.h  dfs.cpp  dfs.h  dijkstra.cpp  dijkstra.h  kruskal.cpp  kruskal.h
src/bfs/: bfs.cpp  bfs.h
src/dfs/: dfs.cpp  dfs.h
src/graph/: CMakeLists.txt  edge.cpp  edge.h  graph.cpp  graph.h  graphList.cpp  graphList.h  graphMatrix.cpp  graphMatrix.h  node.cpp  node.h
src/logs/: error.h  logCollector.h
tests/: CMakeLists.txt  baseTest.h  bfsTest.cpp  clientTest.cpp  dfsTest.cpp  dijkstraTest.cpp  graphFactory.h  graphTest.cpp  graphs.odg  kruskalTest.cpp  testBfs.cpp  testColor.cpp  testCreatingGraph.cpp  testDfs.cpp  testDijkstra.cpp  testGraphClient.cpp  testKruskal.cpp  timeType.h  timeType.h.in
tests/bfs/: bfsTest.cpp
